--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.0.8",
-    "@strapi/plugin-users-permissions": "4.0.8",
+    "@strapi/plugin-documentation": "^4.1.1",
     "@strapi/plugin-i18n": "4.0.8",
-    "pg": "8.6.0"
+    "@strapi/plugin-users-permissions": "4.0.8",
+    "@strapi/strapi": "4.0.8",
+    "pg": "8.6.0",
+    "strapi-plugin-entity-relationship-chart": "^4.0.2"
   },
   "author": {
     "name": "A Strapi developer"
