--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "uuid": "00302640-7cd0-4ae6-8531-b9afa3456966"
   },
   "engines": {
-    "node": ">=12.x.x <=16.14.0",
+    "node": ">=12.x.x <=16.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
